--- a/FormsAdventure2/FormsAdventure2.csproj
+++ b/FormsAdventure2/FormsAdventure2.csproj
@@ -53,11 +53,65 @@
     <Compile Include="ChooseCharactor.Designer.cs">
       <DependentUpon>ChooseCharactor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Room10.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room10.Designer.cs">
+      <DependentUpon>Room10.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room11.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room11.Designer.cs">
+      <DependentUpon>Room11.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room12cs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room12cs.Designer.cs">
+      <DependentUpon>Room12cs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room13.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room13.Designer.cs">
+      <DependentUpon>Room13.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room14.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room14.Designer.cs">
+      <DependentUpon>Room14.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room15.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room15.Designer.cs">
+      <DependentUpon>Room15.cs</DependentUpon>
+    </Compile>
     <Compile Include="Room16.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Room16.Designer.cs">
       <DependentUpon>Room16.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room17.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room17.Designer.cs">
+      <DependentUpon>Room17.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room18.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room18.Designer.cs">
+      <DependentUpon>Room18.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room19.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room19.Designer.cs">
+      <DependentUpon>Room19.cs</DependentUpon>
     </Compile>
     <Compile Include="Room2.cs">
       <SubType>Form</SubType>
@@ -65,11 +119,113 @@
     <Compile Include="Room2.Designer.cs">
       <DependentUpon>Room2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Room20.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room20.Designer.cs">
+      <DependentUpon>Room20.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room21.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room21.Designer.cs">
+      <DependentUpon>Room21.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room22.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room22.Designer.cs">
+      <DependentUpon>Room22.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room23.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room23.Designer.cs">
+      <DependentUpon>Room23.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room24.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room24.Designer.cs">
+      <DependentUpon>Room24.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room25.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room25.Designer.cs">
+      <DependentUpon>Room25.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room27.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room27.Designer.cs">
+      <DependentUpon>Room27.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room28.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room28.Designer.cs">
+      <DependentUpon>Room28.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room29.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room29.Designer.cs">
+      <DependentUpon>Room29.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room3.Designer.cs">
+      <DependentUpon>Room3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room30.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room30.Designer.cs">
+      <DependentUpon>Room30.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room4.Designer.cs">
+      <DependentUpon>Room4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Room5.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Room5.Designer.cs">
       <DependentUpon>Room5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room6.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room6.Designer.cs">
+      <DependentUpon>Room6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room26.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room26.Designer.cs">
+      <DependentUpon>Room26.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room7.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room7.Designer.cs">
+      <DependentUpon>Room7.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room8.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room8.Designer.cs">
+      <DependentUpon>Room8.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Room9.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Room9.Designer.cs">
+      <DependentUpon>Room9.cs</DependentUpon>
     </Compile>
     <Compile Include="StartRoom1.cs">
       <SubType>Form</SubType>
@@ -130,6 +286,69 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Room10.resx">
+      <DependentUpon>Room10.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room11.resx">
+      <DependentUpon>Room11.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room12cs.resx">
+      <DependentUpon>Room12cs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room13.resx">
+      <DependentUpon>Room13.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room14.resx">
+      <DependentUpon>Room14.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room15.resx">
+      <DependentUpon>Room15.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room17.resx">
+      <DependentUpon>Room17.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room18.resx">
+      <DependentUpon>Room18.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room19.resx">
+      <DependentUpon>Room19.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room20.resx">
+      <DependentUpon>Room20.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room21.resx">
+      <DependentUpon>Room21.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room22.resx">
+      <DependentUpon>Room22.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room23.resx">
+      <DependentUpon>Room23.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room24.resx">
+      <DependentUpon>Room24.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room25.resx">
+      <DependentUpon>Room25.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room27.resx">
+      <DependentUpon>Room27.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room28.resx">
+      <DependentUpon>Room28.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room29.resx">
+      <DependentUpon>Room29.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room3.resx">
+      <DependentUpon>Room3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room30.resx">
+      <DependentUpon>Room30.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room4.resx">
+      <DependentUpon>Room4.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Room5.resx">
       <DependentUpon>Room5.cs</DependentUpon>
     </EmbeddedResource>
@@ -138,6 +357,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Room16.resx">
       <DependentUpon>Room16.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room6.resx">
+      <DependentUpon>Room6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room26.resx">
+      <DependentUpon>Room26.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room7.resx">
+      <DependentUpon>Room7.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room8.resx">
+      <DependentUpon>Room8.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Room9.resx">
+      <DependentUpon>Room9.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StartRoom1.resx">
       <DependentUpon>StartRoom1.cs</DependentUpon>
